--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,1 +1,21 @@
-<p>grafica1 works!</p>
+<div class="row">
+  <div class="col-6">
+    <app-dona titulo="Ventas"
+              [labels]="labels2"
+              [data]="data2"></app-dona>
+  </div>
+  <div class="col-6">
+    <app-dona titulo="Compras"
+              [labels]="labels1"
+              [data]="data1"></app-dona>
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-6">
+    <app-dona titulo="Retiros"></app-dona>
+  </div>
+  <div class="col-6">
+    <app-dona titulo="Transferencias"></app-dona>
+  </div>
+</div>
