--- a/src/app/pages/grafica1/grafica1.component.html
+++ b/src/app/pages/grafica1/grafica1.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row animated fadeIn">
   <div class="col-6">
     <app-dona titulo="Ventas"
               [labels]="labels2"
@@ -11,7 +11,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row animated fadeIn">
   <div class="col-6">
     <app-dona titulo="Retiros"></app-dona>
   </div>
