--- a/src/app/pages/progress/progress.component.html
+++ b/src/app/pages/progress/progress.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <div class="col-12">
     <div class="card">
-      <div class="card-body">
+      <div class="card-body animated fadeIn">
         <h4 class="card-title">Barra de progreso a rayas</h4>
         <div class="progress m-t-20">
           <div  class="progress-bar bg-primary progress-bar-striped active"
