--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -24,14 +24,21 @@
         <li class="nav-small-cap">PERSONAL</li>
         <li *ngFor="let item of menItems">
           <a class="has-arrow waves-effect waves-dark" href="#" aria-expanded="false">
-            <i class="mdi mdi-gauge"></i>
+            <i class="{{ item.icono }}"></i>
             <span class="hide-menu">{{ item.titulo }}
               <span class="label label-rouded label-themecolor pull-right">{{ item.submenu.length }}</span>
             </span>
           </a>
           <ul aria-expanded="false" class="collapse">
             <li *ngFor="let subItem of item.submenu">
-              <a [routerLink]="subItem.url">{{ subItem.titulo }} </a>
+              <a  [routerLink]="subItem.url"
+                  routerLinkActive="active"
+                  [routerLinkActiveOptions]="{ exact: true }">{{ subItem.titulo }} </a>
+              <ul aria-expanded="false" class="collapse">
+                <li *ngFor="let items of subItem.sub">
+                  <a [routerLink]="items.url">{{ items.titulo }} </a>
+                </li>
+              </ul>
             </li>
           </ul>
         </li>
