--- a/src/assets/css/colors/blue-dark.css
+++ b/src/assets/css/colors/blue-dark.css
@@ -19,7 +19,7 @@ File: scss
 /*Top bar
 *******************/
 .topbar {
-  background: #1e88e5; }
+  background: #0A4989; }
   .topbar .top-navbar .navbar-header .navbar-brand .dark-logo {
     display: none; }
   .topbar .top-navbar .navbar-header .navbar-brand .light-logo {
@@ -50,13 +50,13 @@ File: scss
 /*General Elements
 *******************/
 a {
-  color: #1e88e5; }
+  color: #0A4989; }
 
 a.link:hover, a.link:focus {
-  color: #1e88e5 !important; }
+  color: #0A4989 !important; }
 
 .bg-theme {
-  background-color: #1e88e5 !important; }
+  background-color: #0A4989 !important; }
 
 .pagination > .active > a,
 .pagination > .active > span,
@@ -64,40 +64,40 @@ a.link:hover, a.link:focus {
 .pagination > .active > span:hover,
 .pagination > .active > a:focus,
 .pagination > .active > span:focus {
-  background-color: #1e88e5;
-  border-color: #1e88e5; }
+  background-color: #0A4989;
+  border-color: #0A4989; }
 
 .right-sidebar .rpanel-title {
-  background: #1e88e5; }
+  background: #0A4989; }
 
 .stylish-table tbody tr:hover, .stylish-table tbody tr.active {
-  border-left: 4px solid #1e88e5; }
+  border-left: 4px solid #0A4989; }
 
 .text-themecolor {
-  color: #1e88e5 !important; }
+  color: #0A4989 !important; }
 
 .profile-tab li a.nav-link.active,
 .customtab li a.nav-link.active {
-  border-bottom: 2px solid #1e88e5;
-  color: #1e88e5; }
+  border-bottom: 2px solid #0A4989;
+  color: #0A4989; }
 
 .profile-tab li a.nav-link:hover,
 .customtab li a.nav-link:hover {
-  color: #1e88e5; }
+  color: #0A4989; }
 
 /*******************
 /*Buttons
 *******************/
 .btn-themecolor,
 .btn-themecolor.disabled {
-  background: #1e88e5;
+  background: #0A4989;
   color: #ffffff;
-  border: 1px solid #1e88e5; }
+  border: 1px solid #0A4989; }
   .btn-themecolor:hover,
   .btn-themecolor.disabled:hover {
-    background: #1e88e5;
+    background: #0A4989;
     opacity: 0.7;
-    border: 1px solid #1e88e5; }
+    border: 1px solid #0A4989; }
   .btn-themecolor.active, .btn-themecolor:focus,
   .btn-themecolor.disabled.active,
   .btn-themecolor.disabled:focus {
@@ -127,11 +127,11 @@ a.link:hover, a.link:focus {
   background: #1c2128; }
 
 .label-themecolor {
-  background: #1e88e5; }
+  background: #0A4989; }
 
 .sidebar-nav > ul > li.active > a {
   color: #ffffff;
-  border-color: #1e88e5; }
+  border-color: #0A4989; }
   .sidebar-nav > ul > li.active > a i {
     color: #ffffff; }
 
