--- a/src/assets/css/colors/blue.css
+++ b/src/assets/css/colors/blue.css
@@ -19,7 +19,7 @@ File: scss
 /*Top bar
 *******************/
 .topbar {
-  background: #1976d2; }
+  background: #042F5F; }
   .topbar .navbar-header {
     background: #ffffff; }
   .topbar .top-navbar .navbar-header .navbar-brand .light-logo {
@@ -34,13 +34,13 @@ File: scss
 /*General Elements
 *******************/
 .lstick {
-  background: #1976d2; }
+  background: #042F5F; }
 
 a.link:hover, a.link:focus {
-  color: #1976d2 !important; }
+  color: #042F5F !important; }
 
 .bg-theme {
-  background-color: #1976d2 !important; }
+  background-color: #042F5F !important; }
 
 .pagination > .active > a,
 .pagination > .active > span,
@@ -48,40 +48,40 @@ a.link:hover, a.link:focus {
 .pagination > .active > span:hover,
 .pagination > .active > a:focus,
 .pagination > .active > span:focus {
-  background-color: #1976d2;
-  border-color: #1976d2; }
+  background-color: #042F5F;
+  border-color: #042F5F; }
 
 .right-sidebar .rpanel-title {
-  background: #1976d2; }
+  background: #042F5F; }
 
 .stylish-table tbody tr:hover, .stylish-table tbody tr.active {
-  border-left: 4px solid #1976d2; }
+  border-left: 4px solid #042F5F; }
 
 .text-themecolor {
-  color: #1976d2 !important; }
+  color: #042F5F !important; }
 
 .profile-tab li a.nav-link.active,
 .customtab li a.nav-link.active {
-  border-bottom: 2px solid #1976d2;
-  color: #1976d2; }
+  border-bottom: 2px solid #042F5F;
+  color: #042F5F; }
 
 .profile-tab li a.nav-link:hover,
 .customtab li a.nav-link:hover {
-  color: #1976d2; }
+  color: #042F5F; }
 
 /*******************
 /*Buttons
 *******************/
 .btn-themecolor,
 .btn-themecolor.disabled {
-  background: #1976d2;
+  background: #042F5F;
   color: #ffffff;
-  border: 1px solid #1976d2; }
+  border: 1px solid #042F5F; }
   .btn-themecolor:hover,
   .btn-themecolor.disabled:hover {
-    background: #1976d2;
+    background: #042F5F;
     opacity: 0.7;
-    border: 1px solid #1976d2; }
+    border: 1px solid #042F5F; }
   .btn-themecolor.active, .btn-themecolor:focus,
   .btn-themecolor.disabled.active,
   .btn-themecolor.disabled:focus {
@@ -91,18 +91,18 @@ a.link:hover, a.link:focus {
 /*sidebar navigation
 *******************/
 .label-themecolor {
-  background: #1976d2; }
+  background: #042F5F; }
 
 .sidebar-nav > ul > li.active > a {
-  color: #1976d2;
-  border-color: #1976d2; }
+  color: #042F5F;
+  border-color: #042F5F; }
   .sidebar-nav > ul > li.active > a i {
-    color: #1976d2; }
+    color: #042F5F; }
 
 .sidebar-nav ul li a.active, .sidebar-nav ul li a:hover {
-  color: #1976d2; }
+  color: #042F5F; }
   .sidebar-nav ul li a.active i, .sidebar-nav ul li a:hover i {
-    color: #1976d2; }
+    color: #042F5F; }
 
 .sidebar-nav > ul > li > a i {
   color: #a6b7bf; }
