--- a/src/assets/css/colors/purple.css
+++ b/src/assets/css/colors/purple.css
@@ -19,7 +19,7 @@ File: scss
 /*Top bar
 *******************/
 .topbar {
-  background: #7460ee; }
+  background: #FFD800; }
   .topbar .navbar-header {
     background: #ffffff; }
   .topbar .top-navbar .navbar-header .navbar-brand .light-logo {
@@ -31,19 +31,19 @@ File: scss
       color: rgba(255, 255, 255, 0.8) !important; }
 
 .hdr-nav-bar .navbar .navbar-nav > li.active > a {
-  border-color: #7460ee; }
+  border-color: #FFD800; }
 
 /*******************
 /*General Elements
 *******************/
 .lstick {
-  background: #7460ee; }
+  background: #FFD800; }
 
 a.link:hover, a.link:focus {
-  color: #7460ee !important; }
+  color: #FFD800 !important; }
 
 .bg-theme {
-  background-color: #7460ee !important; }
+  background-color: #FFD800 !important; }
 
 .pagination > .active > a,
 .pagination > .active > span,
@@ -51,40 +51,40 @@ a.link:hover, a.link:focus {
 .pagination > .active > span:hover,
 .pagination > .active > a:focus,
 .pagination > .active > span:focus {
-  background-color: #7460ee;
-  border-color: #7460ee; }
+  background-color: #FFD800;
+  border-color: #FFD800; }
 
 .right-sidebar .rpanel-title {
-  background: #7460ee; }
+  background: #FFD800; }
 
 .stylish-table tbody tr:hover, .stylish-table tbody tr.active {
-  border-left: 4px solid #7460ee; }
+  border-left: 4px solid #FFD800; }
 
 .text-themecolor {
-  color: #7460ee !important; }
+  color: #FFD800 !important; }
 
 .profile-tab li a.nav-link.active,
 .customtab li a.nav-link.active {
-  border-bottom: 2px solid #7460ee;
-  color: #7460ee; }
+  border-bottom: 2px solid #FFD800;
+  color: #FFD800; }
 
 .profile-tab li a.nav-link:hover,
 .customtab li a.nav-link:hover {
-  color: #7460ee; }
+  color: #FFD800; }
 
 /*******************
 /*Buttons
 *******************/
 .btn-themecolor,
 .btn-themecolor.disabled {
-  background: #7460ee;
+  background: #FFD800;
   color: #ffffff;
-  border: 1px solid #7460ee; }
+  border: 1px solid #FFD800; }
   .btn-themecolor:hover,
   .btn-themecolor.disabled:hover {
-    background: #7460ee;
+    background: #FFD800;
     opacity: 0.7;
-    border: 1px solid #7460ee; }
+    border: 1px solid #FFD800; }
   .btn-themecolor.active, .btn-themecolor:focus,
   .btn-themecolor.disabled.active,
   .btn-themecolor.disabled:focus {
@@ -94,18 +94,18 @@ a.link:hover, a.link:focus {
 /*sidebar navigation
 *******************/
 .label-themecolor {
-  background: #7460ee; }
+  background: #FFD800; }
 
 .sidebar-nav > ul > li.active > a {
-  color: #7460ee;
-  border-color: #7460ee; }
+  color: #FFD800;
+  border-color: #FFD800; }
   .sidebar-nav > ul > li.active > a i {
-    color: #7460ee; }
+    color: #FFD800; }
 
 .sidebar-nav ul li a.active, .sidebar-nav ul li a:hover {
-  color: #7460ee; }
+  color: #FFD800; }
   .sidebar-nav ul li a.active i, .sidebar-nav ul li a:hover i {
-    color: #7460ee; }
+    color: #FFD800; }
 
 .sidebar-nav > ul > li > a i {
   color: #a6b7bf; }
